# verl-hardware-plugin

./: .gitignore  README.md  pyproject.toml
docs/: development.md  flagos.md  mlu.md  xpu.md
tests/: test_plugin_registration.py
verl_hardware_plugin/: __init__.py
verl_hardware_plugin/engines/: __init__.py  fsdp_flagos.py  fsdp_metax.py  fsdp_mlu.py  fsdp_xpu.py  megatron_flagos.py  megatron_metax.py  megatron_mlu.py  megatron_xpu.py
verl_hardware_plugin/utils/: __init__.py  config_manager.py
